 - Add support for input/output of nested parameter sets
 - Check for dimensions in linear solvers
 - Add support for automated error control for variational problems
 - Add support for refinement of MeshFunctions after mesh refinement
 - Change order of test and trial spaces in Form constructors
 - Make SWIG version >= 2.0 a requirement
 - Recognize subdomain data in Assembler from both Form and Mesh
 - Add storage for subdomains (cell_domains etc) in Form class
 - Rename MeshData "boundary facet cells" --> "boundary_facet_cells"
 - Rename MeshData "boundary facet numbers" --> "boundary_facet_numbers"
 - Rename MeshData "boundary indicators" --> "boundary_indicators"
 - Rename MeshData "exterior facet domains" --> "exterior_facet_domains"
 - Updates for UFC 2.0.1
 - Add FiniteElement::evaluate_basis_derivatives_all
 - Add support for VTK output of facet-based MeshFunctions
 - Change default log level from PROGRESS to INFO
 - Add copy functions to FiniteElement and DofMap
 - Simfplify DofMap
 - Interpolate vector values when reading from time series
0.9.10 [2011-02-23]
 - Updates for UFC 2.0.0
 - Handle TimeSeries stored backward in time (automatic reversal)
 - Automatic storage of hierarchy during refinement
 - Remove directory/library 'main', merged into 'common'
 - dolfin_init --> init, dolfin_set_precision --> set_precision
 - Remove need for mesh argument to functional assembly when possible
 - Add function set_output_stream
 - Add operator () for evaluation at points for Function/Expression in C++
 - Add abs() to GenericVector interface
 - Fix bug for local refinement of manifolds
 - Interface change: VariationalProblem now takes: a, L or F, (dF)
 - Map linear algebra objects to processes consistently with mesh parition
 - Lots of improvemenst to parallel assembly, dof maps and linear algebra
 - Add lists supported_elements and supported_elements_for_plotting in Python
 - Add script dolfin-plot for plotting meshes and elements from the command-line